--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -31,3 +31,8 @@ weight = 2
 name = "Privacy Policy"
 url = "/privacy-policy"
 weight = 3
+
+[[footer]]
+name = "SMS Terms"
+url = "/sms-terms"
+weight = 4
